# outlook-emails

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
docs/: IDEIA.md
tests/: test_integration.py  test_unit.py
