[project]
name = "outlook-emails"
version = "0.1.0"
description = "Simple FastAPI integration with Outlook profile via Microsoft Graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "msal>=1.31.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
